added a aws logo file to the images folder

--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@
 <!-- Footer -->
   <footer class="footer">
     <div class="aws-logo">
-      <img src="resources/images/AWSLogo.png" alt="AWS Logo" style="width: 80px; height: auto;">
+      <img src="resources/images/AWSLogo.jpg" alt="AWS Logo" style="width: 80px; height: auto;">
     </div>
   </footer>
 
